<resources>
    <string name="app_name">ExitMed</string>

    <!--  sign  -->
    <string name="sign_in_title">환영합니다!\n로그인을 해주세요.</string>
    <string name="sign_in_move_to_sign_up">척척약사는 처음이신가요? 가입하기</string>
    <string name="sign_in_id_hint">ID</string>
    <string name="sign_in_password_hint">PASSWORD</string>
    <string name="sign_in">로그인</string>
    <string name="sign_up_password_title">영문, 숫자를 포함해 10자리 이상의\n비밀번호를 입력해주세요!</string>
    <string name="sign_up_password_input_title">2-1. 비밀번호 입력</string>
    <string name="sign_up_password_hint">사용할 비밀번호를 입력해주세요</string>
    <string name="sign_up_password_double_check_title">2-1. 비밀번호 확인</string>
    <string name="sign_up_password_double_check_hint">비밀번호를 다시 입력해주세요</string>
    <string name="back">이전</string>
    <string name="next">다음</string>
    <string name="sign_up_email_error">올바르지 않은 이메일 형식이에요</string>
    <string name="sign_up_password_error">올바르지 않은 비밀번호 형식이에요.</string>
    <string name="sing_up_info_title">가입완료까지 거의 다 왔어요.\n당신은 어떤 사람인가요?</string>
    <string name="sign_up_info_name">3-1. 이름</string>
    <string name="sign_up_info_name_hint">이름을 입력해주세요</string>
    <string name="sign_up_info_birth">3-2. 출생년도</string>
    <string name="sign_up_info_birth_hint">출생년도를 입력해주세요(ex.2023)</string>
    <string name="sign_up_info_gender">3-3. 성별</string>
    <string name="sign_up_complete">가입완료</string>
    <string name="sign_up_info_gender_male">남성</string>
    <string name="sign_up_info_gender_female">여성</string>
    <string name="sign_up_info_gender_none">선택안함</string>
    <string name="cheokcheok">척척약사</string>
    <string name="sign_up_email_title1">에 오신걸 환영합니다!</string>
    <string name="sign_up_email_title2">계정을 만들어 볼까요?</string>
    <string name="sign_up_email">1. 이메일 입력</string>
    <string name="sign_up_email_hint">사용할 이메일을 입력해주세요</string>
    <string name="sign_up_email_double_check">중복확인</string>
    <string name="sign_up_success_toast">회원가입에 성공했습니다!</string>
    <string name="sign_up_fail_toast">회원가입에 실패했습니다.</string>
    <string name="sign_up_email_duplicated_toast">이미 존재하는 이메일이에요.</string>
    <string name="sign_up_email_not_duplicated_toast">사용 가능한 이메일이에요</string>
    <string name="sign_in_fail_toast">이메일, 비밀번호를 다시 확인해주세요</string>
    <string name="sign_up_info_pregnant_no">아니요/선택안함</string>
    <string name="sign_up_info_pregnant_yes">예</string>

    <!--  home  -->
    <string name="home_title2">에게 물어보세요!</string>
    <string name="home_dose_title">복용관리</string>
    <string name="home_search_hint">약 이름으로 검색하기</string>
    <string name="home_image_search_totle">약 이름을 모르시나요?\n이미지로 검색하기</string>

    <!-- search  -->
    <string name="search_history">검색기록</string>
    <string name="search_bookmark">즐겨찾기</string>
    <string name="search_count">%d개</string>
    <string name="search_box_hint">약 이름으로 검색하기(ex. 타이레놀)</string>
    <string name="search_result">검색 결과</string>
    <string name="search_result_empty">검색결과가 없습니다</string>

    <!--  my   -->
    <string name="my_page_toolbar">마이페이지</string>
    <string name="my_page_nickname">다니니</string>
    <string name="my_page_title2">건강한 복약 관리 하세요!</string>
    <string name="my_page_bookmark">즐겨찾기</string>
    <string name="my_page_modify_member_information">회원정보 수정</string>
    <string name="my_page_terms_conditions">이용약관</string>
    <string name="my_page_personal_information">개인정보처리방침</string>
    <string name="pill_administration">복용관리</string>

    <!--  pill creation  -->
    <string name="pill_creation_title">약 서랍 생성</string>
    <string name="pill_creation_date_title">약을 언제까시 드시나요?</string>
    <string name="pill_creation_period_title">약을 얼마나 자주 드시나요?</string>
    <string name="pill_creation_time_title">약을 언제 드시나요?</string>
    <string name="pill_creation_period">섭취횟수 %d회</string>
    <string name="pill_creation_memo_title">나만의 약 메모를 남겨봐요</string>
    <string name="pill_creation_memo_content">%d/200</string>
    <string name="pill_creation_memo_content_hint">자유롭게 나만의 메모를 남겨주세요 :)</string>
    <string name="pill_creation">약서랍 생성</string>
    <string name="pill_creation_step">STEP %d/4</string>
    <string name="pill_creation_date_format">%d-%d-%d</string>
    <string name="Pill_creation_count">섭취횟수 %d화</string>
    <string name="pill_creation_everyday">매일</string>
    <string name="pill_creation_fixed_day">정해진 요일마다</string>
    <string name="pill_creation_monday">월요일</string>
    <string name="pill_creation_tuesday">화요일</string>
    <string name="pill_creation_wednesday">수요일</string>
    <string name="pill_creation_thursday">목요일</string>
    <string name="pill_creation_friday">금요일</string>
    <string name="pill_creation_saturday">토요일</string>
    <string name="pill_creation_sunday">일요일</string>
    <string name="pill_creation_day_setting_title">복용할 요일을 모두 선택해주세요</string>

    <!--  dose  -->
    <string name="dose_managing">복용 관리</string>
    <string name="pill_drawer_detail_info_period_title">복용 주기</string>
    <string name="pill_drawer_detail_info_last_dose_title">복용 종료일</string>
    <string name="pill_drawer_detail_info_title">복약 정보</string>
    <string name="pill_drawer_detail_pill_info_title">약 정보</string>
    <string name="pill_drawer_detail_memo_title">약 메모</string>
    <string name="pill_drawer_detail_pill_info_usage">용법</string>
    <string name="pill_drawer_detail_pill_info_caution_title">주의사항</string>
    <string name="pill_drawer_detail_dose_time_order">%d번째 알람</string>
    <string name="pill_drawer">약 서랍</string>
    <string name="pill_time_table">복용 시간표</string>
    <string name="pill_drawer_move_to_search_title2">약 이름으로 검색하러 가기</string>
    <string name="pill_drawer_move_to_search_title1">내 약서랍에 약을 추가하고 싶나요?</string>

    <!--  image search  -->
    <string name="image_search_title">이미지 검색</string>
    <string name="image_search_button_title">이미지 검색하기</string>
    <string name="image_capture_button_title">사진 촬영하기</string>
    <string name="image_capture_light_reflection">촬영 시 [빛반사]에\n주의해주세요</string>
    <string name="image_capture_identification_pharse">[식별문구]를 신경써서\n촬영해주세요</string>
    <string name="image_capture_pill_front">알약의 [앞면]을\n촬영해주세요</string>
    <string name="image_capture_center">카메라 [중앙]에\n알약을 두세요</string>
    <string name="image_search_top_accuracy_title">찾고자 하는 약이 맞나요?</string>
    <string name="button_no">아니예요</string>
    <string name="button_yes">맞아요!</string>
    <string name="image_search_top5_accuracy_title">찾고자 하는 약이 맞다면\n\"맞아요\"를 눌러주세요! </string>
    <string name="image_search_pill_name">약 이름: %s</string>
    <string name="image_search_pill_shape">성상: %s</string>

    <!--  pill detail  -->
    <string name="pill_detail_title">의약품 상세</string>
    <string name="pill_detail_bookmark_toast">즐겨찾기에 추가했습니다!</string>
    <string name="pill_detail_medication">복약</string>
    <string name="pill_detail_components_content">성분/함량</string>
    <string name="pill_detail_usage">용법</string>
    <string name="pill_detail_dur">DUR</string>
    <string name="pill_detail_drug_interaction">약물 상호작용</string>
    <string name="pill_detail_medication_effect">이 약은 무슨 약인가요?</string>
    <string name="pill_detail_medication_storage_method_title">이 약은 어떻게 보관해야하나요?</string>
    <string name="pill_detail_components_content_title">이 약의 성분, 함량은 어떻게 되나요?</string>
    <string name="pill_detail_usage_title">이 약은 어떻게 먹어야 하나요?</string>
    <string name="pill_detail_drug_interaction_question_title">내가 복용중인 약과의 상호작용은 어떻게 되나요?</string>
    <string name="pill_detail_dur_age_prohibit_title">특정 연령대 금기</string>
    <string name="pill_detail_dur_pregnant_prohibit_title">임부 금기</string>
    <string name="pill_detail_dur_capacity_caution_title">용량 주의</string>
    <string name="pill_detail_dur_administration_duration_caution_title">투여기간 주의</string>
    <string name="pill_detail_dur_elder_caution_title">노인 주의</string>
    <string name="dur_meaning">의약품 처방·조제 시 의약품 안전성 관련 정보를 실시간으로 제공하여 부적절한 약물사용을 사전에 점검할 수 있도록 의사 및 약사에게 의약품 안전 정보를 제공하는 것을 DUR(Drug Utilization Review)라고 합니다.</string>
    <string name="loading_dur_contents">해당 내용을 로딩 중 입니다. 조금 기다려 주세요:)</string>
    <string name="init_dur_age_prohibition_contents">특정 연령대에 금기시 되는 의약품입니다. 건강 보험 심사 평가원 홈페이지에 접속해 참고해 주세요.</string>
    <string name="init_dur_pregnant_prohibition_contents">임부에 대해 금기시 되는 의약품 입니다. 건강 보험 심사 평가원 홈페이지에 접속해 참고해 주세요.</string>
    <string name="init_dur_capacity_caution_contents">섭취 용량에 주의 해야 하는 의약품 입니다. 건강 보험 심사 평가원 홈페이지에 접속해 참고해 주세요.</string>
    <string name="init_dur_administration_duration_caution_contents">투여 기간에 주의 해야 하는 의약품 입니다. 건강 보험 심사 평가원 홈페이지에 접속해 참고해 주세요.</string>
    <string name="init_dur_senior_caution_contents">노인 분들은 주의 해야 하는 의약품 입니다. 건강 보험 심사 평가원 홈페이지에 접속해 참고해 주세요.</string>
    <string name="pill_detail_caution">주의</string>
    <string name="pill_detail_caution_title">이 약의 주의사항은 무엇인가요?</string>

    <!--  double dose  -->
    <string name="pill_detail_no_drug_interaction">내가 복용 중인 약과 중복 투약이 아니예요 :)</string>
    <string name="pill_detail_drug_interaction_content"><![CDATA[%s와(과) <font color="#FF2424">동일성분 중복</font>이에요. 복용에 주의해 주세요.]]></string>
    <string name="pill_creation_dialog_description_basic">복용하고 있는 약을 관리하고\n복용 알림을 받을 수 있어요.</string>
    <string name="pill_creation_dialog_description_duplicated">해당 약은 약서랍에 있는 약과\n동일 성분 중복이에요.\n복용에 주의해주세요.</string>
</resources>