<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.cecd.exitmed.presentation.auth.SignViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing24"
            android:layout_marginTop="@dimen/spacing24"
            android:src="@drawable/ic_close"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="24dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_close">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_sign_up_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/gl_start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_begin="@dimen/spacing24" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/gl_end"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_end="@dimen/spacing24" />

                <TextView
                    android:id="@+id/tv_sign_up_email_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up_password_title"
                    android:textAppearance="@style/TextAppearance.Title2"
                    app:layout_constraintStart_toStartOf="@id/gl_start"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_sign_up_password_double_check"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/sign_up_password_double_check_title"
                    android:textAppearance="@style/TextAppearance.BodyM1"
                    app:layout_constraintStart_toStartOf="@id/gl_start"
                    app:layout_constraintTop_toBottomOf="@+id/tv_sign_up_password_error" />

                <EditText
                    android:id="@+id/et_sign_up_password_double_check"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/shape_radius_8"
                    android:backgroundTint="@color/lightgray_warm"
                    android:hint="@string/sign_up_password_double_check_hint"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:paddingVertical="14dp"
                    android:paddingStart="20dp"
                    android:text="@={viewModel.inputPWDoubleCheck}"
                    android:textAppearance="@style/TextAppearance.BodyM1"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray_200"
                    app:layout_constraintEnd_toEndOf="@id/gl_end"
                    app:layout_constraintStart_toStartOf="@id/gl_start"
                    app:layout_constraintTop_toBottomOf="@+id/tv_sign_up_password_double_check" />

                <TextView
                    android:id="@+id/tv_sign_up_password_double_check_error"
                    visibility="@{viewModel.isDoubleCheck == false &amp; !viewModel.inputPWDoubleCheck.empty}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="@dimen/spacing24"
                    android:text="비밀번호가 일치하지 않아요"
                    android:textAppearance="@style/TextAppearance.CaptionM1"
                    android:textColor="@color/error"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/gl_end"
                    app:layout_constraintTop_toBottomOf="@id/et_sign_up_password_double_check" />

                <TextView
                    android:id="@+id/tv_sign_up_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:text="@string/sign_up_password_input_title"
                    android:textAppearance="@style/TextAppearance.BodyM1"
                    app:layout_constraintStart_toStartOf="@id/gl_start"
                    app:layout_constraintTop_toBottomOf="@+id/tv_sign_up_email_title" />

                <EditText
                    android:id="@+id/et_sign_up_password"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/shape_radius_8"
                    android:backgroundTint="@color/lightgray_warm"
                    android:hint="@string/sign_up_password_hint"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:paddingVertical="14dp"
                    android:paddingStart="20dp"
                    android:text="@={viewModel.inputPW}"
                    android:textAppearance="@style/TextAppearance.BodyM1"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray_200"
                    app:layout_constraintEnd_toEndOf="@id/gl_end"
                    app:layout_constraintStart_toStartOf="@id/gl_start"
                    app:layout_constraintTop_toBottomOf="@+id/tv_sign_up_password" />

                <TextView
                    android:id="@+id/tv_sign_up_password_error"
                    visibility="@{viewModel.isValidPassword == false &amp; !viewModel.inputPW.empty}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/sign_up_password_error"
                    android:textAppearance="@style/TextAppearance.CaptionM1"
                    android:textColor="@color/error"
                    app:layout_constraintEnd_toStartOf="@+id/gl_end"
                    app:layout_constraintTop_toBottomOf="@id/et_sign_up_password" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_back"
            style="@style/Widget.FullButton.Basic"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing24"
            android:layout_marginEnd="6dp"
            android:layout_marginBottom="@dimen/spacing24"
            android:paddingVertical="12dp"
            android:text="@string/back"
            android:textAppearance="@style/TextAppearance.BodyM2"
            android:textColor="@color/orange_500"
            app:backgroundTint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_next"
            app:layout_constraintStart_toStartOf="parent"
            app:strokeColor="@color/orange_500"
            app:strokeWidth="1dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_next"
            style="@style/Widget.FullButton.Basic"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="@dimen/spacing24"
            android:layout_marginBottom="@dimen/spacing24"
            android:background="@drawable/shape_radius_8"
            android:enabled="@{viewModel.isValidPassword &amp; viewModel.isDoubleCheck}"
            android:paddingVertical="12dp"
            android:text="@string/next"
            android:textAppearance="@style/TextAppearance.BodyM2"
            android:textColor="@color/selector_complete_button_text_color"
            app:backgroundTint="@color/selector_complete_button_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_back" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>